feat: ProtocolLib依存を追加し、WASD入力によるBlockDisplayの移動処理を強化。

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ name: RunThroughHole
 version: 1.0
 main: mods.kpw.runthroughhole.Main # This will be replaced by a random package name
 api-version: '1.21'
+depend: [ProtocolLib]
 commands:
   rth:
     description: Starts or stops the RunThroughHole game.
